sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:28: error: not found: value ischange_2
	} while(isechange && ischange_2)
                             ^