sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
	var debut:Int =0
	var fin:Int = getNombreValeurs()-2
	var isechange = false
	var isechange_2 = false
	do {
		isechange = false
		if (!isechange_2) {
			for (i<-debut to fin) {
				if (plusPetit(i+1,i)) {
					echange(i+1,i)
					isechange = true
				}
			}
			fin -= 1
		}
		isechange_2 = false
		if (!isechange) {
			for (i<-fin to debut by -1) {
				if (plusPetit(i+1,i)) {
					echange(i,i+1)
					isechange_2 = true
				}
			}
		 	debut += 1
		}
	} while(isechange && ischange_2)
}
